BUGFIX: Use full height in selectbox preview element
If the secondary or tertiary label is not set the preview
element wouldn’t cover the whole selectbox which
will then show a graphical glitch.

--- a/packages/react-ui-components/src/SelectBox_Option_MultiLineWithThumbnail/style.css
+++ b/packages/react-ui-components/src/SelectBox_Option_MultiLineWithThumbnail/style.css
@@ -4,6 +4,10 @@
     background: var(--colors-ContrastDarkest);
 }
 
+.multiLineWithThumbnail__item--singleLabel {
+    line-height: inherit;
+}
+
 .multiLineWithThumbnail__secondaryLabel {
     color: var(--colors-ContrastBright);
     display: block;
